# rayfish

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  TODO.md  build.rs  flake.nix  install.sh  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-linux.yml  install.yml  nightly.yml  nix.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/uniffi/ray_mobile/: ray_mobile.kt
android/app/src/main/java/xyz/rayfish/android/: DnsProxy.kt  Files.kt  MainActivity.kt  NodeHolder.kt  RayfishVpnService.kt  SendService.kt  ShareActivity.kt  Telemetry.kt  TransferNotifier.kt
android/app/src/main/java/xyz/rayfish/android/ui/: RayfishApp.kt
android/app/src/main/java/xyz/rayfish/android/ui/components/: Components.kt
android/app/src/main/java/xyz/rayfish/android/ui/qr/: CaptureActivityPortrait.kt  PortraitCaptureActivity.kt  Qr.kt
android/app/src/main/java/xyz/rayfish/android/ui/screens/: HomeScreen.kt  NetworkDetailScreen.kt  NetworksScreen.kt  YouScreen.kt
android/app/src/main/java/xyz/rayfish/android/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_stat_vpn.xml
android/app/src/main/res/values/: strings.xml  themes.xml
benches/: README.md  forward.rs
cross/: Dockerfile.gnu
docs/: book.md
docs/superpowers/specs/: 2026-06-19-phase1-hardening-design.md
nix/: module.nix  package.nix  vm-test.nix
ray-mobile/: Cargo.toml
ray-mobile/src/: android_tun.rs  diag.rs  lib.rs
ray-proto/: Cargo.toml
ray-proto/src/: ipc.rs  lib.rs  types.rs
src/: apply.rs  audit.rs  config.rs  control.rs  daemon.rs  dht.rs  dns.rs  dns_config.rs  dns_packet.rs  dns_resolver.rs  exit_node.rs  firewall.rs  forward.rs  hostname.rs  identity.rs  invite.rs  ipc.rs  layout.rs  lib.rs  logdir.rs  main.rs  membership.rs  onepassword.rs  peers.rs  picker.rs  progress.rs  ratelimit.rs  reject.rs  revocation.rs  shutdown.rs  ssh.rs  stats.rs  style.rs  transport.rs  tun.rs  update.rs
src/cli/: alias.rs  connect.rs  exit_node.rs  files.rs  firewall.rs  gui.html  gui.rs  invite.rs  mod.rs  network.rs  pair.rs  service.rs  status.rs  update.rs
src/daemon/: connect_service.rs  connection_manager.rs  dns_manager.rs  dns_service.rs  file_service.rs  foundation.rs  mesh_connection.rs  mod.rs  network_registry.rs  transfers.rs
src/daemon/handlers/: admin.rs  connect.rs  create_join.rs  diagnostics.rs  files.rs  firewall.rs  invite.rs  mod.rs  runtime.rs
src/daemon/mesh/: accept.rs  admin.rs  alias.rs  bootstrap.rs  connect.rs  coordinator.rs  create_join.rs  diagnostics.rs  exit_node.rs  files.rs  firewall.rs  invite.rs  join.rs  mod.rs  publish.rs  reconverge.rs  rename.rs  runtime.rs  select.rs
src/dns/: config.rs  mod.rs  resolver.rs
src/term/: layout.rs  mod.rs  picker.rs  progress.rs  style.rs
tests/: e2e.sh  exit_node_kernel.rs
tests/bench/: README.md  ab.sh
tests/e2e/: README.md
tests/e2e/apply/: README.md  run.sh
tests/e2e/connect/: README.md  run.sh
tests/e2e/device-cert/: README.md  run.sh
tests/e2e/exit-node/: README.md  run.sh
tests/e2e/reliability/: .gitignore  README.md  run.sh
tests/e2e/restore-offline/: README.md  run.sh
tests/e2e/ssh/: run.sh
tests/e2e/unpair/: README.md  run.sh
tests/lib/: common.sh  provision.sh  teardown.sh
