[package]
name = "ray-proto"
version = "0.1.7"
edition = "2024"
rust-version = "1.91"
authors = ["Dario <dario@rayfish.xyz>"]
license = "MPL-2.0"
description = "Shared IPC wire protocol for the rayfish daemon/CLI and frontends"
repository = "https://github.com/rayfish/rayfish"

# Shared wire protocol between the `ray` daemon/CLI and GUI frontends.
# Holds the IPC message enum + msgpack codec and the small enums those
# messages reference. Intentionally light on dependencies so frontends
# (e.g. the Tauri UI) don't pull in the daemon's TUN/DNS/blob stack.

[dependencies]
anyhow = "1"
bytes = "1"
derive_more = { version = "2", features = ["is_variant", "display"] }
futures = "0.3"
iroh = { version = "1" }
# SCM_RIGHTS fd passing for `SendFileFd` (sendmsg/recvmsg with ancillary data).
nix = { version = "0.30", features = ["socket", "uio"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["net", "rt", "macros"] }
